# minimal

./: .gitattributes  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile2  deps.cmake  docker-compose.yml  ecal.Dockerfile  requirements_amd64-torch.txt  requirements_cuda-torch.txt  requirements_cuda.txt  requirements_rocm-torch.txt  requirements_rocm.txt  requirements_yolo.txt  yolov10b.torchscript
include/: UserMatDebugAllocator.h
include/pubsub/: timestamp.h
include/tracking/: HungarianAlgorithmEigen.h  KalmanFilter.h  KalmanFilterTracker.h  Sort.h  association_functions.h  linear_assignment.h
include/transformation/: CameraConfig.h  Config.h  DrawingUtils.h  EigenUtils.h  LensConfig.h  zip-view.h
lib/: CMakeLists.txt
lib/ecal/: CMakeLists.txt
lib/ecal/include/: eCAL_RAII.h  signal_handler.h
lib/ecal/scripts/: eCALSubscriber.py
msg/: CMakeLists.txt  CompactObject.fbs  Detection2D.fbs  Image.fbs  ImageTrackerResult.fbs
scripts/: python_sub.py  yolo.py
scripts/projection/: proj.py
scripts/pubsub/: python_sub.py
scripts/transformation/: proj.py
scripts/yolo/: yolo.py
src/: CMakeLists.txt  camera_simulator.cpp  pub.cpp  sub.cpp  yolo.cpp
src/camera_simulator/: CMakeLists.txt  camera_simulator.cpp  camera_simulator_flatbuffers.cpp  image_display.cpp
src/coordinate_transformation/: CMakeLists.txt  image_to_world.cpp
src/display/: CMakeLists.txt  displayer.cpp
src/pubsub/: CMakeLists.txt  pub.cpp
src/tracking/: CMakeLists.txt  tracking.cpp  tracking_node.cpp
src/transformation/: CMakeLists.txt  CameraConfig.cpp  Config.cpp  LensConfig.cpp  image_to_world.cpp  transformation_display.cpp
src/visualization/: CMakeLists.txt  transformation_display.cpp
src/yolo/: CMakeLists.txt  yolo.cpp  yolo_node.cpp  yolo_test.cpp
test/: CMakeLists.txt  test_UserMatDebugAllocator.cpp
test/dispatcher_queue/: CMakeLists.txt  main.cpp
test/dispatcher_queue/include/camera/: camera.h
test/dispatcher_queue/include/msg/: GlobalTrackerResult.h
test/dispatcher_queue/include/node/: node.h
test/dispatcher_queue/include/tracking/: KalmanBoxTracker.h  KalmanFilter.h  Sort.h  association_functions.h  tracking.h
test/dispatcher_queue/include/transformation/: transformation.h  undistort.h
test/dispatcher_queue/include/visualization/: tracking_visualization.h
test/dispatcher_queue/include/yolo/: yolo.h
test/dispatcher_queue/src/: CMakeLists.txt
test/dispatcher_queue/src/camera/: CMakeLists.txt  camera.cpp
test/dispatcher_queue/src/msg/: CMakeLists.txt
test/dispatcher_queue/src/node/: CMakeLists.txt  node.cpp
test/dispatcher_queue/src/tracking/: CMakeLists.txt  KalmanBoxTracker.cpp  KalmanFilter.cpp  tracking.cpp
test/dispatcher_queue/src/transformation/: CMakeLists.txt  transformation.cpp  undistort.cpp
test/dispatcher_queue/src/visualization/: CMakeLists.txt  visualization.cpp
test/dispatcher_queue/src/yolo/: CMakeLists.txt  yolo.cpp
test/signals/: CMakeLists.txt  main.cpp
test/signals/include/camera/: camera.h
test/signals/include/node/: node.h
test/signals/include/yolo/: yolo.h
test/signals/src/: CMakeLists.txt
test/signals/src/camera/: CMakeLists.txt
test/signals/src/node/: CMakeLists.txt
test/signals/src/yolo/: CMakeLists.txt  yolo.cpp
test/tracking/: CMakeLists.txt  create_detections_file.cpp  detections_file.json  test_sort.cpp  test_sort.py  test_timestamps.cpp
test/tracking/scripts/: sort.py
test/transformation/: CMakeLists.txt  affine_transformation_test.cpp  automatic_differentiation.cpp  automatic_differentiation_test.cpp  get_bounding_boxes_points.py  test.cpp  undistort_test.cpp
test/yolo/: CMakeLists.txt  yolo_test.cpp
